5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1753_1526.log
== SUBMITION (2019-05-16 19:08:46) 
-- CODE:
a=float(input("quantidade inicial de mana da bruxa sosipatra")
b=float(input("quantidade de mana que ela gasta por dia para sustentar"))
b=float(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=a-b+c
print(cont)
		  
-- EXECUTION TIME:
0.254956
-- ERROR:
  File "/home/codebench/codes/1753/1526/main.py", line 2
    b=float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:08:47) 
-- CODE:
a=float(input("quantidade inicial de mana da bruxa sosipatra")
b=float(input("quantidade de mana que ela gasta por dia para sustentar"))
b=float(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=a-b+c
print(cont)
		  
-- ERROR:
File "XXXX", line 2
    b=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:09:06) 
-- CODE:
a=float(input("quantidade inicial de mana da bruxa sosipatra")
b=float(input("quantidade de mana que ela gasta por dia para sustentar"))
b=float(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=a-b+c
print(cont)
		  
-- ERROR:
File "XXXX", line 2
    b=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:09:26) 
-- CODE:
a=float(input("quantidade inicial de mana da bruxa sosipatra"))
b=float(input("quantidade de mana que ela gasta por dia para sustentar"))
b=float(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=a-b+c
print(cont)
		  
-- EXECUTION TIME:
0.242975
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
0
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
0
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:09:27) 
-- CODE:
a=float(input("quantidade inicial de mana da bruxa sosipatra"))
b=float(input("quantidade de mana que ela gasta por dia para sustentar"))
b=float(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=a-b+c
print(cont)
		  
-- ERROR:
File "XXXX", line 2
    b=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:10:36) 
-- CODE:
a=float(input("quantidade inicial de mana da bruxa sosipatra"))
b=float(input("quantidade de mana que ela gasta por dia para sustentar"))
b=float(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=((a)-(b)+(c))
print(cont)
		  
-- ERROR:
File "XXXX", line 2
    b=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:10:47) 
-- CODE:
a=float(input("quantidade inicial de mana da bruxa sosipatra"))
b=float(input("quantidade de mana que ela gasta por dia para sustentar"))
b=float(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=((a)-(b)+(c))
print(cont)
		  
-- ERROR:
File "XXXX", line 2
    b=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:11:19) 
-- CODE:
a=float(input("quantidade inicial de mana da bruxa sosipatra"))
b=float(input("quantidade de mana que ela gasta por dia para sustentar"))
b=float(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=((a)-(b)+(c))
print(cont)
		  
-- ERROR:
File "XXXX", line 2
    b=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:11:36) 
-- CODE:
a=float(input("quantidade inicial de mana da bruxa sosipatra"))
b=float(input("quantidade de mana que ela gasta por dia para sustentar"))
b=float(input("mana que ela recupera  "))
cont=1
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=((a)-(b)+(c))
print(cont)
		  
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:12:26) 
-- CODE:
a=float(input("quantidade inicial de mana da bruxa sosipatra"))
b=float(input("quantidade de mana que ela gasta por dia para sustentar"))
b=float(input("mana que ela recupera  "))
cont=1
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=((a)-(b)+(c))
print(cont)
		  
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:13:27) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
b=int(input("mana que ela recupera  "))
cont=1
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=(a)-(b)+(c)
print(cont)
		  
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:13:56) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
b=int(input("mana que ela recupera  "))
cont=1
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=a-b+c
print(cont)
		  
-- EXECUTION TIME:
0.267588
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
1
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
1
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:15:12) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
b=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=a-(b*acu)+(c*acu)
print(cont)
		  
-- EXECUTION TIME:
0.214689
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
0
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
0
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:15:13) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
b=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=a-(b*acu)+(c*acu)
print(cont)
		  
-- EXECUTION TIME:
0.217867
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
0
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
0
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:15:13) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
b=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=a-(b*acu)+(c*acu)
print(cont)
		  
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:15:31) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
b=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=a-(b*acu)+(c*acu)
print(a)
		  
-- OUTPUT:
500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:16:22) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
b=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a<=0):
	cont=cont+1
	acu=acu+1
	a=a-(b*acu)+(c*acu)
print(a)
		  
-- OUTPUT:
500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:16:45) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
b=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=a-(b*acu)+(c*acu)
print(cont)
		  
-- EXECUTION TIME:
0.18383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/1526/main.py", line 9, in <module>
    a=a-(b*acu)+(c*acu)
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:16:47) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
b=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=a-(b*acu)+(c*acu)
print(cont)
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    a=a-(b*acu)+(c*acu)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:17:28) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
b=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- EXECUTION TIME:
0.159867
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/1526/main.py", line 9, in <module>
    a=(a-(b*acu)+(c*acu))
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:17:28) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
b=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    a=(a-(b*acu)+(c*acu))
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:18:18) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- EXECUTION TIME:
0.174811
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
2
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
6
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:19) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:52) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:18:58) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:20:37) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:20:58) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:22:37) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- EXECUTION TIME:
0.307456
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
2
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
6
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:22:37) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:22:38) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- EXECUTION TIME:
0.424713
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
quantidade inicial de mana da bruxa sosipatraquantidade de mana que ela gasta por dia para sustentarmana que ela recupera  2
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
quantidade inicial de mana da bruxa sosipatraquantidade de mana que ela gasta por dia para sustentarmana que ela recupera  6
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
quantidade inicial de mana da bruxa sosipatraquantidade de mana que ela gasta por dia para sustentarmana que ela recupera  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:23:29) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a+(b*acu)-(c*acu))
print(cont)
		  
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:23:44) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a-(b*acu)+(c*acu))
print(cont)
		  
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:31) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=a-(b*acu)+(c*acu)
print(cont)
		  
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:25:34) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=a-(b*acu)+(c*acu)
print(cont)
		  
-- EXECUTION TIME:
0.567508
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
2
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
2
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:25:35) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=a-(b*acu)+(c*acu)
print(cont)
		  
-- EXECUTION TIME:
0.708668
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
2
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
6
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:25:41) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=a-b*acu+c*acu
print(cont)
		  
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:25:41) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=a-b*acu+c*acu
print(cont)
		  
-- EXECUTION TIME:
0.468897
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
2
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
quantidade inicial de mana da bruxa sosipatraquantidade de mana que ela gasta por dia para sustentarmana que ela recupera  6
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
quantidade inicial de mana da bruxa sosipatraquantidade de mana que ela gasta por dia para sustentarmana que ela recupera  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:26:04) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=a-b*acu+c*acu
print(cont)
		  
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:27:32) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	a=a-b+c
print(cont)
		  
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:27:33) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	a=a-b+c
print(cont)
		  
-- EXECUTION TIME:
0.574429
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
3
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
19
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
quantidade inicial de mana da bruxa sosipatraquantidade de mana que ela gasta por dia para sustentarmana que ela recupera  35
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:27:45) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	a=a-b+c
print(cont)
		  
-- EXECUTION TIME:
0.491808
-- TEST CASE 1:
---- input:
500
300
100
---- correct output:
3
---- user output:
3
-- TEST CASE 2:
---- input:
10000
650
100
---- correct output:
19
---- user output:
19
-- TEST CASE 3:
---- input:
12000
500
150
---- correct output:
35
---- user output:
35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:36:02) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a+(b*acu)-(c*acu))
print(cont)
		  
-- EXECUTION TIME:
754.2
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:37:01) 
-- CODE:
a=int(input("quantidade inicial de mana da bruxa sosipatra"))
b=int(input("quantidade de mana que ela gasta por dia para sustentar"))
c=int(input("mana que ela recupera  "))
cont=0
acu=0
while(a>0):
	cont=cont+1
	acu=acu+1
	a=(a+(b*acu)-(c*acu))
print(cont)
		  
-- EXECUTION TIME:
811.676
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
